css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');

* {
    margin:0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}   

/* Navbar */
.header {
    position: relative;
    top: 20px;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 5px 100px;
    z-index: 9999;
}

.name {
    color: rgb(40, 140, 200);
    user-select: none;
    font-size: 40px;
}

.navbar a {
    position: relative;
    color: rgb(36, 36, 36);
    text-decoration: none;
    font-size: 20px;
    margin-left: 2rem;
    transition: 500ms;
}

.navbar a:hover {
    color: rgba(40, 140, 200);
}

.navbar a::after {
    content: "";
    position: absolute;
    background-color: rgb(40, 140, 200);
    height: 3px;
    width: 0%;
    left: 0;
    bottom: -5px;
    transition: 0.3s;
}

.navbar a:hover::after {
    width: 100%;
}

.icons {
    font-size: 40px;
    color: rgb(36, 36, 36);
    cursor: pointer;
    display: none;
    right: 0;
    margin-left: auto;
}

#check {
    display: none;
}

/* Intro */

.introcont {
    text-align: center;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
    margin-top: 20vh;
}

.intro {
    position: relative;
    margin-top: 50px;
    user-select: none;
}

.intro h1 {
    font-size: 70px;
}

/* .img {
    border: 2px solid black;
    border-radius: 300px;
    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.3);;
    width: 30rem;
    margin-bottom: 50px;
} */

.allbtn {
    display: flex;
    justify-content: center;
    align-items: center;
}

.iconlinks {
    font-size: 40px;
}

.iconlinks a {
    text-decoration: none;
    color: black;
    transition: 0.5s ease;
}

.iconlinks a:hover {
    color: rgb(40, 140, 200);
}

.btnlinks {
    margin-left: 50px;
}

.introbtn {
    border: 2px solid rgb(36, 36, 36);
    color: rgb(36, 36, 36);
    text-decoration: none;
    background-color: transparent;
    overflow: hidden;
    border-radius: 10px;
    padding: 10px;
    position: relative;
    font-size: 15px;
    font-weight: bold;
    margin-right: 10px;
    transition: 0.5s ease;
}


.introbtn:hover {
    box-shadow: inset 220px 0 rgb(40, 140, 200);
    border: 2px solid rgb(40, 140, 200);
    color: rgb(240, 240, 240);
    cursor: pointer;
} 

.spanname {
    color: rgb(40, 140, 200);
}

.introdesc {
    font-size: 25px;
    width: 50rem;
    margin: auto;
    position: relative;
    padding-bottom: 50px;
    display: flex;
    justify-content: center;
    text-align: center;
}

/* ABOUT */

.about {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 40vh;
    height: 80vh;
}

/* .about::after {
    content: "";
    position: absolute;
    background-color: rgb(36, 36, 36);
    height: 3px;
    width: 20%;
    left: 18vh;
    top: 42vh;
    transition: 0.3s;
} */

.aboutcont {
    display: flex;
    width: auto;
}

.aboutdesc h1 {
    font-size: 60px;
    margin-bottom: 20px;
    user-select: none;
}

.aboutdesc p {
    font-size: 20px;
    width: 600px;
    line-height: 1.5;
}

.aboutdetail {
    margin-left: 60px;
    width: 500px;
}

.aboutdetail td{
    font-size: 20px;
    padding: 5px 10px 10px;
}

/* TECH STACK */

.techstack {
    margin-top: 35vh;
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
}

.techlng {
    display: grid;
    grid-template-columns: 0.5fr 0.5fr 0.5fr;
}

.techcont h1 {
    font-size: 40px;
}


/* MY WORKS */

section .bg-color {
    margin-top: 400px;
    margin-bottom: 100px;
    background-color: white;
    z-index: 1;
}

.cardtitle {
    font-size: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 20px;
    user-select: none;
}

section .cards {
    display: flex;
    justify-content: center;
}

section .cards .text-cards {
    background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.8));
    box-shadow: 2px 2px 4px rgba(36, 36, 36, 0.3);
    color: white;
    margin: 10px;
    padding: 10px;
    width: 350px;
    border-radius: 5px;
}

section .cards .text-cards h1 {
    font-size: 35px;
    text-align: center;
    margin-bottom: 20px;
}

/* Contact */
section .contact{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    font-size: 20px;
    background: rgba(36, 36, 36,0.05);
    box-shadow: 2px 0px 4px rgba(36, 36, 36, 0.3);
    padding: 30px 30px;
    height: 800px;  
    width: 100%;
}

.contactfrm {
    margin-bottom: 50px;
}

.cont-desc {
    text-align: center;
    margin-bottom: 20px;
    user-select: none;
}

.cont-desc h1{
    color: rgb(40, 140, 200);
    font-size: 40px;
    margin-bottom: 20px;
}

.cont-container {
    position: relative;
    display: inherit;
    justify-content: center;
    display: flex;
}

.cont-inputs {
    flex-direction: column;
    display: flex;
}

.inputdetails {
    margin: 10px;
}

.inputdetails p {
    margin-bottom: 5px;
    font-size: 18px;
    user-select: none;
}

.input{
    font-family: 'Times New Roman', Times, serif;
    width: 380px;
    height: 50px;
    border: 2px solid rgb(40, 140, 200);
    border-radius: 5px;
    padding: 10px;
    font-size: 15px;
}

.comment {
    display: flex;
    position: relative;
    margin: auto;
    justify-content: center;
    align-items: center;
    margin-top: 10px;
}

.comment textarea {
    resize: none;
    padding: 10px;
}

.submitbtn {
    position: absolute;
    margin: 10px;
    color: rgb(36, 36, 36);
    border: 2px solid rgb(36, 36, 36);
    border-radius: 10px;
    right: 140px;
    padding: 10px;
    width: 100px;
    font-size: 15px;
    font-weight: bold;
    transition: 0.5s ease;
}

.submitbtn:hover {
    box-shadow: inset 200px 0 rgb(40, 140, 200);
    border: 2px solid rgb(40, 140, 200);
    color: rgb(240, 240, 240);
    cursor: pointer;
}
/* ... */

